--- a/krish544/package.json
+++ b/krish544/package.json
@@ -1,9 +1,12 @@
 {
   "name": "krish544",
+  "homepage": "https://Krish54491.github.io/Krish54491.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
