--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@tsparticles/react": "^3.0.0",
     "pdfjs-dist": "^5.1.91",
+    "pokemon-sprites": "github:PokeAPI/sprites",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
