--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tensorflow-models/handpose": "^0.1.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@tsparticles/react": "^3.0.0",
+    "axios": "^1.13.2",
     "pdfjs-dist": "^5.1.91",
     "pokemon-sprites": "github:PokeAPI/sprites",
     "react": "^18.3.1",
