--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+    "deploy-cf": "npm run build && wrangler deploy",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "npm run build && vite preview"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -28,6 +29,7 @@
     "tsparticles": "^3.7.1"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.17.1",
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -42,6 +44,7 @@
     "postcss": "^8.4.49",
     "prettier": "3.6.2",
     "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
+    "vite": "^7.3.0",
+    "wrangler": "^4.54.0"
   }
 }
