--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "npm run build && vite preview"
+    "preview": "npm run build && wrangler pages dev dist"
   },
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
