--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,5 @@ compatibility_date = "2025-04-03"
 
 pages_build_output_dir = "dist"
 
-assets = { 
-  not_found_handling = "single-page-application",
-  run_worker_first = ["/api/*"]
-}
+[assets]
+not_found_handling = "single-page-application"
