--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "deploy-cf": "npm run build && wrangler deploy",
+    "deploy-cf": "npm run build && wrangler pages deploy",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
