--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "npm run build && wrangler pages dev dist"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.13.2",
     "pokemon-sprites": "github:PokeAPI/sprites",
