yahoo, solved world peace, made comments

--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "deploy": "gh-pages -d dist",
     "deploy-cf": "npm run build && wrangler pages deploy",
     "dev": "vite",
+    "dev:cf": "wrangler pages dev dist",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "npm run build && wrangler pages dev dist"
+    "preview": "npm run build && npm run dev:cf",
+    "db:generate-migration": "drizzle-kit generate",
+    "db:apply-migrations": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.51.4",
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@supabase/supabase-js": "^2.89.0",
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.13.2",
+    "cookie": "^1.1.1",
+    "drizzle-orm": "^0.45.1",
     "pokemon-sprites": "github:PokeAPI/sprites",
+    "postgres": "^3.4.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
@@ -29,6 +37,7 @@
     "@eslint/js": "^9.13.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
