--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postgres": "^3.4.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.0.1",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.7.1"
