--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.51.4",
     "@fingerprintjs/fingerprintjs": "^5.0.1",
+    "@simplewebauthn/browser": "^13.2.2",
+    "@simplewebauthn/server": "^13.2.2",
     "@supabase/supabase-js": "^2.89.0",
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.13.2",
